--- a/css/style.css
+++ b/css/style.css
@@ -1000,7 +1000,6 @@ body.stretched #header.full-header .container {
 }
 
 #header.full-header #logo {
-	padding-right: 30px;
 	margin-right: 30px;
 }
 
@@ -1069,8 +1068,6 @@ body.stretched #header.full-header .container {
 
 #header.full-header #primary-menu > ul {
 	float: left;
-	padding-right: 15px;
-	margin-right: 15px;
 }
 
 #primary-menu-trigger,
@@ -1750,7 +1747,7 @@ body:not(.device-sm):not(.device-xs):not(.device-xxs) .container-fullwidth #top-
 
 body.top-search-open #top-search form input { pointer-events: auto; }
 
-body:not(.device-sm):not(.device-xs):not(.device-xxs) #header.transparent-header:not(.sticky-header):not(.full-header):not(.floating-header) #top-search form input { border-bottom: 2px solid rgba(0,0,0,0.1); }
+body:not(.device-sm):not(.device-xs):not(.device-xxs) #header.transparent-header:not(.sticky-header):not(.full-header):not(.floating-header) #top-search form input {  }
 
 #top-search form input::-moz-placeholder {
 	color: #555;
